CSS solution solved. Easier than I initially thought. Got stuck on justify-content:space-between in main div container.

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
+  display: flex;
   font-family: monospace;
   background: papayawhip;
+  justify-content: space-between; 
+  align-items: center;
+  padding: .7rem;
 }
 
 .logo {
@@ -14,6 +18,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  gap: 1rem;
 }
 
 a {
